# local-files-to-md-for-llm

./: .gitignore  pyproject.toml
.cursor/rules/: global-dev-guideline.mdc
docs/prompts/: vooster_prd.txt
docs/references/: upstage.md
docs/vibe/prd/: prd_vibe.md
docs/vibe/trd/: trd.md  trd_vibe.md
notebooks/: docling_sandbox.ipynb  docuparse_sandbox.ipynb
