[project]
name = "local-files-to-md-for-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "jaepil-choi.laptop",email = "chljeffreyz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pylint (>=3.3.8,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "xlwings (>=0.33.15,<0.34.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jupytext (>=1.17.2,<2.0.0)",
    "nbstripout (>=0.8.1,<0.9.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jupyter-cache (>=1.0.1,<2.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "markitdown[all] (>=0.1.2,<0.2.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.29,<0.4.0)",
    "openai (>=1.99.8,<2.0.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "nodejs (>=0.1.1,<0.2.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "sacremoses (>=0.1.1,<0.2.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "docling (>=2.51.0,<3.0.0)",
    "transformers (>=4.56.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "local_files_to_md_for_llm", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
